--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -4,10 +4,28 @@
 body{
     background-color: $color-bg-primary;
     color: $color-text-primary;
-    font-size: 1.8vw;
+    font-size: $text-size;
+    font-weight: $text-weight-normal;
     hyphens: auto;
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
+}
+
+h1,
+h3{
+    text-transform: uppercase;    
+    font-weight: $text-weight-bold;
+}
+
+h1{
+    color: $color-text-tertiary;
+    font-size: 3.6rem;    
+}
+
+h3{
+    color: $color-text-quartiary;
+    font-size: 1.2rem;
+    margin: 1rem 0 -1rem 1.5rem;
 }
 
 input{
@@ -22,11 +40,4 @@ input{
 
 input:focus{
     border: 1px solid $color-text-secondary;
-}
-
-.textBoxTitle{
-    font-size: 1.2rem;
-    margin: 0 0 -1rem 1rem;
-    font-weight: $text-bold;
-    text-transform: uppercase;
 }
