--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,9 +1,13 @@
-/* Colors */
+// Colors
 $color-bg-primary: #232326;
 $color-bg-secondary: #434346;
 
-$color-text-primary: #f0f0f0;
+$color-text-primary: #e0e0e0;
 $color-text-secondary: #ffffff;
+$color-text-tertiary: #f0c0a0;
+$color-text-quartiary: #f0f0c0;
 
-/* Typogaphy */
-$text-bold: 700;
+// Typography
+$text-size: .8vw;
+$text-weight-bold: 800;
+$text-weight-normal: 400;
