--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,10 +5,10 @@ $color-bg-secondary: #434346;
 $color-text-primary: #e0e0e0;
 $color-text-secondary: #ffffff;
 $color-text-tertiary: #f0c0a0;
-$color-text-quartiary: #f0f0a0;
+$color-text-quarternary: #f0f0a0;
 
 // Typography
-$font-size: .8vw;
+$font-size: 1.4vw;
 $font-weight-bold: 800;
 $font-weight-normal: 300;
-$letter-spacing: .2rem;
+$letter-spacing: .1rem;
