--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $color-bg-primary: #232326;
 $color-bg-secondary: #434346;
+$color-bg-tertiary: #333336;
 
 $color-text-primary: #e0e0e0;
 $color-text-secondary: #ffffff;
