--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -59,6 +59,17 @@ body {
   border: 1px solid #e3e3e3;
 }
 
+.input input[type="number"] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
+.input input[type=number]::-webkit-inner-spin-button, 
+.input input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+}
+
 .input label {
   display: inline;
 }
@@ -71,8 +82,9 @@ button {
   margin: .2rem;
   border: none;
   padding: .5rem;
-  font: inherit;
-  width: 6rem;
+  font-size: 2rem;
+  width: 4rem;
+  height: 4rem;
 }
 
 button:hover {
@@ -88,7 +100,7 @@ button.save:hover {
 }
 
 .browser{
-  width: 25rem;
+  width: 100%;
   margin: auto;
   border: 1px solid silver;
 }
@@ -98,8 +110,24 @@ button.save:hover {
   border-spacing: 0;
 }
 
+.browser table tr th,
+.browser table tr td{
+  padding : .2rem .4rem;
+}
+
 .browser table tbody tr.table-header{
   background-color: #eee;
+}
+
+.fade {
+  opacity: .5;
+  transition: opacity .2s ease-in-out;
+  -moz-transition: opacity .2s ease-in-out;
+  -webkit-transition: opacity .2s ease-in-out;
+}
+
+.fade:hover {
+  opacity: 1;
 }
 
 .browser table tbody tr:hover{
@@ -108,10 +136,15 @@ button.save:hover {
   cursor: pointer;
 }
 
+.browser table tbody tr.table-header:hover{
+  background-color: #eee;
+  color: black;
+}
+
 .browser table tbody tr th,
 .browser table tbody tr td{
   width: 25%;
-  padding: .3rem .7rem;
+  // padding: .3rem .7rem;
 }
 
 .browser table tbody td.justifyRight{
